<resources>
    <string name="app_name">DateHelper</string>
    <string name="ask_question_hint">Ask Your Question</string>
    <string name="image_app_icon">Date Helper Icon</string>


    <!--Buttons strings-->

    <string name="button_facebook">Login with Facebook</string>
    <string name="button_google_sign_out">Sign out from Google</string>
    <string name="button_next">Next</string>
    <string name="button_add_more">Add More</string>
    <string name="button_view_profile">View Your Profile</string>

    <!--Activity names / labels-->

    <string name="text_app_mission">Advice for successful dates</string>
    <string name="activity_profile_type">Profile Type</string>
    <string name="activity_gender_select">Gender</string>
    <string name="activity_interests">Top Interests</string>
    <string name="activity_date_interests">Select or create Interests that describes your Date</string>
    <string name="activity_study_area">Study Area</string>
    <string name="activity_profile">My Profile</string>
    <string name="title_activity_new_question">NewQuestion</string>

    <!--Image titles-->

    <string name="img_title_male">Male</string>
    <string name="img_title_female">Female</string>
    <string name="img_title_public">Public</string>
    <string name="img_title_incognito">Incognito</string>
    <string name="ask_new_question">Ask New Question</string>
    <string name="tags_label">Tags</string>
    <string name="name_activity_hint">Rephrase your question as a verb</string>
    <string name="add_tag_button">+</string>
    <string name="results_suggest_new_question">Or you can ask a new question.</string>
    <string name="hom_help_button">Help me on a date</string>
    <string name="home_ask_button">Ask A Question</string>
    <string name="results_header">Our Suggestions</string>

    <!--String Arrays-->

    <string-array name="interests">
        <item>Movies</item>
        <item>Sports</item>
        <item>Games</item>
        <item>Books</item>
    </string-array>

    <string-array name="study_area">
        <item>Exact Sciences</item>
        <item>Bio Sciences</item>
        <item>Human Sciences</item>
    </string-array>

    <string-array name="incognito_names">
        <item>A Boy</item>
        <item>A Girl</item>
    </string-array>

    <!--Facebook -->

    <string name="facebook_app_id">1294427687348201</string>
    <string name="fb_login_protocol_scheme">fb1294427687348201</string>
    <string name="add_comment">Comment</string>
    <string name="write_comment_hint">Write your comment</string>


</resources>
