<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newQuestion">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars[14]" />
    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/result_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/textview_border"
        android:ems="10"
        android:minLines="2"
        android:scrollHorizontally="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/question_sugestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/textview_border_light"
        android:ems="10"
        android:minLines="2"
        android:scrollHorizontally="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/result_1" />


    <EditText
        android:id="@+id/name_the_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/textview_border"
        android:ems="10"
        android:hint="@string/name_activity_hint"
        android:maxLines="1"
        android:scrollHorizontally="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag1" />


    <TextView
            android:id="@+id/tag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/colorPrimary"
            android:text="Movies"
            android:textColor="@color/colorTopBar"
            android:textSize="24dp"
            app:layout_constraintStart_toEndOf="@+id/tag2"
            app:layout_constraintTop_toTopOf="@+id/tag" />

        <TextView
            android:id="@+id/tag2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/colorPrimary"
            android:text="Movies"
            android:textColor="@color/colorTopBar"
            android:textSize="24dp"
            app:layout_constraintStart_toEndOf="@+id/tag"
            app:layout_constraintTop_toTopOf="@+id/tag" />

    <TextView
        android:id="@+id/tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="@color/colorPrimary"
        android:text="art"
        android:textColor="@color/colorTopBar"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@+id/suggest_new_question"
        app:layout_constraintTop_toTopOf="@+id/suggest_new_question" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorTextBoxDark"
        android:drawablePadding="@dimen/fab_margin"
        android:onClick="askQuestion"
        android:text="@string/ask_new_question"
        android:textColor="@color/colorTopBar"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_the_activity" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Ask a Question"
        android:textColor="@color/colorTextBoxDark"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/suggest_new_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tags_label"
        android:textColor="@color/colorTextBoxDark"
        android:textSize="@dimen/tag_size"
        app:layout_constraintStart_toStartOf="@+id/question_sugestion"
        app:layout_constraintTop_toBottomOf="@+id/question_sugestion" />

    <Button
        android:id="@+id/button3"
        android:layout_width="45dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorTextBoxDark"
        android:text="@string/add_tag_button"
        android:textColor="@color/colorTopBar"
        android:textSize="@dimen/tag_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tag1"
        app:layout_constraintTop_toTopOf="@+id/tag1" />


    <!--Comments section -->

    <!-- comment 2-->

</android.support.constraint.ConstraintLayout>
